tests/NormalTests/paczka1/fuzzy1/40823998.err
Error in line 15: cBk3X02 A30 47,8
Error in line 19: CfOx2 A150 79,9
Error in line 22: cBk3X02 S920 21,2
Error in line 26: cBk3X02 A150 81,5
Error in line 27: h29axga S920 48,8
Error in line 31: h29axga A30 76,1
Error in line 34: h29axga S920 76,1
